--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,31 +32,31 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
     environment:
-      KESTRA_CONFIGURATION: |
+       KESTRA_CONFIGURATION: |
         datasources:
           postgres:
-            url: jdbc:postgresql://postgres:5432/kestra
+            url: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
             driverClassName: org.postgresql.Driver
-            username: kestra
-            password: k3str4
+            username: ${POSTGRES_USER}
+            password: ${POSTGRES_PASSWORD}
         kestra:
           server:
-            basicAuth:
-              enabled: false
-              username: "admin@kestra.io" # it must be a valid email address
-              password: kestra
+            basic-auth:
+              enabled: true
+              username: "${KESTRA_USERNAME}" # must be a valid email address
+              password: ${KESTRA_PASSWORD}
           repository:
             type: postgres
           storage:
             type: local
             local:
-              basePath: "/app/storage"
+              base-path: "/app/storage"
           queue:
             type: postgres
           tasks:
-            tmpDir:
+            tmp-dir:
               path: /tmp/kestra-wd/tmp
-          url: http://localhost:8080/
+          url: ${KESTRA_URL}
     ports:
       - "8080:8080"
       - "8081:8081"
