dev branch commit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
         kestra:
           server:
             basic-auth:
-              enabled: true
+              enabled: false
               username: "${KESTRA_USERNAME}" # must be a valid email address
               password: ${KESTRA_PASSWORD}
           repository:
